--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Legal Lawyer Manager - Node Base",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,6 @@
     "mongoose": "^4.4.7"
   },
   "engines": {
-    "node": ">=0.12.7"
+    "node": "~4.4.0"
   }
 }
