--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   "homepage": "https://github.com/RenatoXSR/llm-node#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "gitkitclient": "0.0.6",
+    "googleapis": "^3.1.0",
     "jade": "^1.11.0",
     "mongodb": "^2.1.8",
     "mongoose": "^4.4.7"
