--- a/package.json
+++ b/package.json
@@ -29,13 +29,19 @@
   },
   "homepage": "https://github.com/RenatoXSR/llm-node#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "googleapis": "^3.1.0",
     "jade": "^1.11.0",
     "mongodb": "^2.1.8",
-    "mongoose": "^4.4.7"
+    "mongoose": "^4.4.7",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
+    "passport-google-auth": "^1.0.1"
   },
   "engines": {
     "node": "~4.4.0"
