--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "googleapis": "^3.1.0",
     "jade": "^1.11.0",
     "mongodb": "^2.1.8",
