--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
-    "passport-google-auth": "^1.0.1"
+    "passport-google-auth": "^1.0.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-linkedin": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "engines": {
     "node": "~4.4.0"
