updated to 1.1, with AJAX list views and filters and added crudEasy as unique crud and api router

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@
 ##
 ## see instructions in config-template.js
 ################
-config.js
+config_private.js
 gitkit-server-secret.json
 gitkit-server-config.json
 .mongorc.js
-
+old_files
+old_files/*
 
 
 #########
